--- a/public/stylesheets/coke.css
+++ b/public/stylesheets/coke.css
@@ -440,7 +440,7 @@ div.loading_list {
 
 .empty_results_box {
 	height: 234px;
-	padding: 104px 10px;
+/*	padding: 104px 10px; */
 }
 
 #search_results_container {
@@ -529,11 +529,6 @@ div.loading_list {
 .dotted_box  {
 	height: 396px;
 	margin-bottom: 0px;
-}
-
-.added_items  {
-	height: 397px;
-	overflow-y: auto;
 }
 
 .playlist_creation_buttons .cancel_button  {
