--- a/public/stylesheets/multitask/general.css
+++ b/public/stylesheets/multitask/general.css
@@ -539,11 +539,9 @@ span.title {font-size: 18px; font-weight: bold;}
 .account_settings .form_row.last {padding-top: 15px; border-bottom: none;}
 .account_settings .form_row label {font-size: 14px; display: block; margin-bottom: 4px;}
 
-.grey_round_box {background: #e1e1e1; padding: 5px; font-size: 14px; -moz-border-radius: 5px; -webkit-border-radius: 5px;}
 .left_side {float: left;}
 .left_side .grey_round_box {height: 20px; padding: 11px 10px; margin-right: 10px; float: left;}
 
-.account_settings .form_row .input {background: #fff; padding: 5px 9px; border: solid 1px #999; color: #333333; font-size: 16px; font-family: Helvetica; height: 20px; vertical-align: middle;}
 .account_settings .form_row .input.full_width {width: 404px;}
 .account_settings .form_row .input.half_width {width: 250px; margin-left: 10px;}
 
